Update server content In order to build a CListenSocket -- to listen for client connection requests In order to build a CClientSocket -- used to connect clients -- set up a List Box -- to display server logs

--- a/MFCNetworkChatSoftwareServer/MFCNetworkChatSoftwareServer.vcxproj
+++ b/MFCNetworkChatSoftwareServer/MFCNetworkChatSoftwareServer.vcxproj
@@ -187,6 +187,8 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CClientSocket.h" />
+    <ClInclude Include="CListenSocket.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MFCNetworkChatSoftwareServer.h" />
     <ClInclude Include="MFCNetworkChatSoftwareServerDlg.h" />
@@ -195,6 +197,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CClientSocket.cpp" />
+    <ClCompile Include="CListenSocket.cpp" />
     <ClCompile Include="MFCNetworkChatSoftwareServer.cpp" />
     <ClCompile Include="MFCNetworkChatSoftwareServerDlg.cpp" />
     <ClCompile Include="pch.cpp">
