--- a/MFCNetworkChatSoftwareClient/MFCNetworkChatSoftwareClient.vcxproj
+++ b/MFCNetworkChatSoftwareClient/MFCNetworkChatSoftwareClient.vcxproj
@@ -30,7 +30,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -187,6 +187,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CClientSocket.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MFCNetworkChatSoftwareClient.h" />
     <ClInclude Include="MFCNetworkChatSoftwareClientDlg.h" />
@@ -195,6 +196,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CClientSocket.cpp" />
     <ClCompile Include="MFCNetworkChatSoftwareClient.cpp" />
     <ClCompile Include="MFCNetworkChatSoftwareClientDlg.cpp" />
     <ClCompile Include="pch.cpp">
