Update server: -- build a user database in MySQL -- add the Connector/C++ configuration -- use Connector/C++ to connect to MySQL database -- use Connector/C++ to add, delete, update and select the database

--- a/MFCNetworkChatSoftwareServer/MFCNetworkChatSoftwareServer.vcxproj.filters
+++ b/MFCNetworkChatSoftwareServer/MFCNetworkChatSoftwareServer.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="CClientSocket.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MySQLModule.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFCNetworkChatSoftwareServer.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CClientSocket.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MySQLModule.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
