Update server: -- optimize the structure of database classes -- the operation of adding, deleting, updating and querying the database was encapsulated

--- a/MFCNetworkChatSoftwareServer/MFCNetworkChatSoftwareServer.vcxproj
+++ b/MFCNetworkChatSoftwareServer/MFCNetworkChatSoftwareServer.vcxproj
@@ -307,6 +307,7 @@
     <ResourceCompile Include="MFCNetworkChatSoftwareServer.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="cpp.hint" />
     <None Include="res\MFCNetworkChatSoftwareServer.rc2" />
   </ItemGroup>
   <ItemGroup>
