--- a/MFCNetworkChatSoftwareClient/MFCNetworkChatSoftwareClient.vcxproj
+++ b/MFCNetworkChatSoftwareClient/MFCNetworkChatSoftwareClient.vcxproj
@@ -278,6 +278,7 @@
     <ClInclude Include="MFCNetworkChatSoftwareClientDlg.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SemanticPrsing.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -292,6 +293,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SemanticPrsing.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MFCNetworkChatSoftwareClient.rc" />
