--- a/MFCNetworkChatSoftwareClient/MFCNetworkChatSoftwareClient.vcxproj.filters
+++ b/MFCNetworkChatSoftwareClient/MFCNetworkChatSoftwareClient.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="CClientSocket.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="SemanticPrsing.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFCNetworkChatSoftwareClient.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CClientSocket.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="SemanticPrsing.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
