--- a/MFCNetworkChatSoftwareServer/MFCNetworkChatSoftwareServer.vcxproj
+++ b/MFCNetworkChatSoftwareServer/MFCNetworkChatSoftwareServer.vcxproj
@@ -286,6 +286,7 @@
     <ClInclude Include="MySQLModule.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SemanticPrsing.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -302,6 +303,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SemanticPrsing.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MFCNetworkChatSoftwareServer.rc" />
