--- a/MFCNetworkChatSoftwareServer/MFCNetworkChatSoftwareServer.vcxproj.filters
+++ b/MFCNetworkChatSoftwareServer/MFCNetworkChatSoftwareServer.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="MySQLModule.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="SemanticPrsing.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFCNetworkChatSoftwareServer.cpp">
@@ -60,6 +63,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MySQLModule.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="SemanticPrsing.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
